[package]
name = "final_work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.0"
itertools = "0.10.5"
ordered-float = "3.6.0"
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
tabled = "0.10.0"
