[package]
name = "final_work"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
array-init = "2.1.0"
csv = "1.2.0"
itertools = "0.10.5"
once_cell = "1.17.1"
ordered-float = "3.6.0"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0.158", features = ["derive"] }
tabled = "0.10.0"
